--- a/cpp/makefile
+++ b/cpp/makefile
@@ -1,6 +1,11 @@
- 
+
+all: prob1 prob2 
+
 prob1: prob1.cpp
 	g++ prob1.cpp -o prob1
 
+prob2: prob2.cpp
+	g++ prob2.cpp -o prob2
+
 clean:
-	rm prob1
+	rm prob1 prob2
