--- a/cpp/makefile
+++ b/cpp/makefile
@@ -1,5 +1,5 @@
 
-all: prob1 prob2 
+all: prob1 prob2 prob3 prob4
 
 prob1: prob1.cpp
 	g++ prob1.cpp -o prob1
@@ -7,5 +7,11 @@ prob1: prob1.cpp
 prob2: prob2.cpp
 	g++ prob2.cpp -o prob2
 
+prob3: prob3.cpp
+	g++ prob3.cpp -o prob3
+
+prob4: prob4.cpp
+	g++ prob4.cpp -o prob4
+
 clean:
-	rm prob1 prob2
+	rm prob1 prob2 prob3
